--- a/templates/index.html
+++ b/templates/index.html
@@ -1,42 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-      <head>
-        <link rel="icon" href="data:image/x-icon;base64,AA" />
-        <link
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-          crossOrigin="anonymous"
-        />
-        <link rel="stylesheet" href="static/styles.css" />
-        <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-          crossOrigin="anonymous"
-        ></script>
-        <title>AC Expenses Parser</title>
-</head>
-<body>
-    <div
-      class="container d-flex justify-content-center"
-    >
-      <div class="flex-column">
-        <h1 class="align-center">AC Expenses Parser</h1>
-        <h2 class="align-center">May 2024</h2>
-        <Form action="" method="post" id="">
-          Search: <input name="searchBar" type="search" />
-          <button name="searchButton" type="submit">
-            Search:
-          </button>
-          <p>Destination: Canada</p>
-          <p>Breakfast: ${expensesData['breakfast']}</p>
-          <p>Lunch: ${expensesData[0].lunch}</p>
-          <p>Dinner: ${expensesData[0].dinner}</p>
-          <p>Snack: ${expensesData[0].snack}</p>
-          <p>-------------</p>
-          <p>Total: ${expensesData[0].total}</p>
-        </Form>
-      </div>
+{% extends 'base.html' %}
+{% from 'bootstrap5/form.html' import render_form %}
+
+{% block title %}Expense Parser{% endblock %}
+
+{% block content %}
+<div class="content">
+    <h1 class="heading mx-auto text-center">Expense Parser</h1>
+    <div class="mx-auto">
+        <p class="description mx-auto text-center">Pairing Expenses Parser for YYYY MM</p>
+
+        {% if form %}
+        <div class="col-md-6 mx-auto">{{ render_form(form, novalidate=True) }}</div>
+
+        {% if data %}
+        <div class="mx-auto w-50 p-10">
+            <p>Canada</p>
+            <p>Breakfast: {{ data['Canada']['breakfast'] }}</p>
+            <p>Lunch: {{ data['Canada']['lunch'] }}</p>
+            <p>Dinner: {{ data['Canada']['dinner'] }}</p>
+            <p>Snack: {{ data['Canada']['snack'] }}</p>
+            <p>-------------------------</p>
+            <p>Total: {{ data['Canada']['total'] }}</p>
+        </div>
+        {% endif %}
+        {% endif %}
+
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
