--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/styles.css') }}"
+      href="{{ url_for('static', filename='styles.css') }}"
     />
     {% endblock %}
 
