--- a/templates/result.html
+++ b/templates/result.html
@@ -7,11 +7,8 @@
 <div class="content">
     <h1 class="heading mx-auto text-center">Expense Parser</h1>
     <div class="mx-auto">
+        <p class="description mx-auto text-center">Pairing Expenses Parser for {{ month }} {{ year }}</p>
 
-        {% if form %}
-        <div class="col-md-6 mx-auto">{{ render_form(form, novalidate=True) }}</div>
-
-        {% if data %}
         <div class="mx-auto w-50 p-10">
             <p>{{ data['destination'] }}</p>
             <p>Breakfast: ${{ data['breakfast'] }}</p>
@@ -21,9 +18,6 @@
             <p>-------------------------</p>
             <p>Total: ${{ data['total'] }}</p>
         </div>
-        {% endif %}
-        {% endif %}
-
     </div>
 </div>
 {% endblock %}
