--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,11 @@ body {
 background-color: white;
 }
 
+#delete {
+    background: red;
+    border: red;
+}
+
 .loader {
   border: 16px solid #f3f3f3; /* Light grey */
   border-top: 16px solid #3498db; /* Blue */
