--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,12 @@
 </div>
 <div class="ps-5">
     {{ render_form(delete_form, novalidate=True) }}
-    <label>Delete all uploaded data</label>
+    <label class="delete_label">Delete all uploaded data</label>
 </div>
 
 {% endblock %}
+    {% include footer.html %}
+{% block footer%}
+{% endblock%}
+
+
