--- a/static/styles.css
+++ b/static/styles.css
@@ -12,6 +12,10 @@ background-color: white;
     opacity: 0.7;
 }
 
+footer {
+
+}
+
 .loader {
   border: 16px solid #f3f3f3; /* Light grey */
   border-top: 16px solid #3498db; /* Blue */
