--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,13 @@
     <label class="delete_label">Delete all uploaded data</label>
 </div>
 
+<footer class="bg-body-tertiary text-center text-lg-start">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+        Copyright &copy; {{ now }}. Matthew Wood
+    </div>
+</footer>
+
 {% endblock %}
-    {% include footer.html %}
-{% block footer%}
-{% endblock%}
+
 
 
